Enlace seleccionado en la barra de menu (azul oscuro)

--- a/less/navs.less
+++ b/less/navs.less
@@ -40,7 +40,7 @@
 
 // NAV LIST
 // --------
-
+@linkColorDark: #036;
 .nav-list {
   padding-left: 15px;
   padding-right: 15px;
@@ -59,7 +59,7 @@
 .nav-list > .active > a:hover {
   color: @white;
   text-shadow: 0 -1px 0 rgba(0,0,0,.2);
-  background-color: @linkColor;
+  background-color: @linkColorDark;
 }
 .nav-list [class^="icon-"] {
   margin-right: 2px;
